test/files/neg/macro-reify-typetag-useabstypetag.check
Test.scala:5: error: No TypeTag available for T
    println(implicitly[TypeTag[T]])
                      ^
Test.scala:6: error: No TypeTag available for List[T]
    println(implicitly[TypeTag[List[T]]])
                      ^
two errors found
